[tool.poetry]
name = "firebolt-electrum"
version = "0.1.0"
description = "Firebolt Electrum is a lightweight Bitcoin client."
authors = ["22388oo", "AreaLayer", "Rsync25"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/AreaLayer/firebolt-electrum"
repository = "https://github.com/AreaLayer/firebolt-electrum"
documentation = "https://github.com/AreaLayer/firebolt-electrum/wiki"


[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
aiorpcx = "^0.23.0"
cryptography = "^3.4.7"
ecdsa = "^0.16.1"
pyaes = "^1.6.1"
certifi = "^2024.07.04"
protobuf = "^3.17.3"
pillow = "^8.2.0"
qrcode = "^7.3.1"
requests = "^2.25.1"
dnspython = "^2.1.0"
attrs = "^21.2.0"
PyQt5 = "^5.15.4"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
black = "^21.6b0"
isort = "^5.9.1"
flake8 = "^3.9.2"
mypy = "^0.902"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
